Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
* [MAINT] Various build deps
- Refactored microservice examples
** [MAINT] Removed uberjar build step.
All application instances now use a `clojure` Docker image rather than custom image containing an uberjar.
** [ADD] For telemetry backend, changed to use Grafana with Grafana Tempo and Prometheus.
** [ADD] Added state lifecycle management, using `with-open` and `closeable` pattern.
** [MAINT] Altered Ring/Pedestal servers to reload routes on every HTTP request.
** [ADD] Added embedded nREPL server to all application and load-gen instances for remote access.

=== `0.2.6` (2024-01-15)

- Bump deps
* [MAINT] OpenTelemetry `1.34.1`
* [BREAK] OpenTelemetry instrumentation agent `2.0.0`
The default OTLP exporter protocol used by the agent has changed from `grpc` to `http/protobuf`.
See the https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/tag/v2.0.0[release notes] for details on this and other breaking changes.
Note the default OTLP exporter protocol used by the autoconfigure SDK extension remains as `grpc`.
* [MAINT] Various build deps

=== `0.2.5` (2024-01-01)

- [FIX] Queried header names in  context propagator text maps (for manually instrumented applications) should be lower-cased.
Previously, `b3multi` and `xray` propagators would fail because header names in Ring `request` maps are lower-cased but the queried header name may not.
- [ADD] Module `clj-otel-sdk-common` which wraps the OpenTelemetry SDK common library.
- [BREAK] Moved function `merge-resources-with-default` to new module `clj-otel-sdk-common`.
- [ADD] Terse syntax alternatives for `span-opts` map parameter in `new-span!` and related functions that create spans.