@@ -35,6 +35,8 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 ** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
 Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
 ** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
+* [MAINT] Updated guide on using `wrap-metrics-by-route` to also wrap Reitit default handler.
+This ensures correct recording of metrics for HTTP server spans with 404, 405 and 406 response codes.
 * [MAINT] Various build deps
 - Refactored microservice examples
 ** [MAINT] Removed uberjar build step.
